--- a/funciones-jquery.css
+++ b/funciones-jquery.css
@@ -5,6 +5,11 @@
   background-repeat: no-repeat;
   padding: 10px;
   background-attachment: fixed;
+  color: rgb(78, 78, 78);
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 .row{
   background-color: paleturquoise;
@@ -35,4 +40,7 @@ span{
   font-style: italic;
   font-weight: bold;
   font-size: 20px;
+}
+.moldear{
+  color: red;
 }
